# eu4x2

./: LICENSE  README.md  eu4x2.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Options.hs
test/: 00_advisortypes.txt  ME_advisortypes.txt
