name:           eu4x2
version:        0.1.0.0
description:    Multiplies all modifier values by 2
author:         Shiyah
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

library
  hs-source-dirs:   src
  build-depends:    base
                  , megaparsec
                  , text
                  , Decimal
                  , directory
  exposed-modules:  Lib
                  , Options
  other-modules:
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Widentities
    -Wredundant-constraints

executable exec-eu4x2
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    eu4x2
                  , base
                  , megaparsec
                  , Decimal
                  , directory
                  , strict
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010